# iot

./: .gitignore
boards/shields/bme280_shield/: CMakeLists.txt  Kconfig.defconfig  Kconfig.shield  README.md  bme280_shield.c  bme280_shield.h  bme280_shield.overlay  shield.yml
boards/shields/ws2812_shield/: CMakeLists.txt  Kconfig.defconfig  Kconfig.shield  README.md  pre_dt_shield.cmake  shield.yml  ws2812_shield.overlay
coap/: CMakeLists.txt  README.rst  prj.conf
coap/src/: packet.c
packet/: README.rst  prj.conf
packet-thread/: CMakeLists.txt  README.rst  bme280.overlay  prj.conf
packet-thread/src/: packet.c
packet/src/: packet.c
